--- a/rentree/css/style_documents.css
+++ b/rentree/css/style_documents.css
@@ -69,3 +69,11 @@ form legend{
 .gifdoc{
 	padding-top: 190px;
 }
+
+.modal-backdrop.in{
+	opacity: 0;
+}
+
+#carousel-example-generic img{
+	margin: auto;
+}
