--- a/rentree/css/default.css
+++ b/rentree/css/default.css
@@ -1,6 +1,7 @@
 body {
 	overflow-x: hidden;
  	background-color:#c5efff;
+
 }
 
 .titre{
@@ -12,4 +13,8 @@ body {
 
 .center{
  	text-align:center;
+}
+
+@-moz-document url-prefix() {
+  fieldset { display: table-cell; }
 }
