--- a/rentree/css/style_documents.css
+++ b/rentree/css/style_documents.css
@@ -54,6 +54,9 @@ form legend{
 .button{
 	margin-top: 30px;
 }
+thead tr th{
+    text-align: center !important;
+}
 
 .formask{
 	text-align: center;
@@ -88,7 +91,7 @@ tr{
 	-webkit-transition: all 80ms cubic-bezier(0.255, 0.475, 0.630, 0.905); 
     -moz-transition: all 80ms cubic-bezier(0.255, 0.475, 0.630, 0.905); 
     -o-transition: all 80ms cubic-bezier(0.255, 0.475, 0.630, 0.905); 
-    ransition: all 80ms cubic-bezier(0.255, 0.475, 0.630, 0.905);
+    transition: all 80ms cubic-bezier(0.255, 0.475, 0.630, 0.905);
   	color: #398439;
 }
 
