--- a/rentree/css/style_documents.css
+++ b/rentree/css/style_documents.css
@@ -105,6 +105,14 @@ tr{
 	width:10%;
 }
 
+.glyph2{
+	width:6%;
+}
+
 .modal_image{
     width:25%;
+}
+
+.notmovingtable{
+    margin-bottom: 0px;
 }
