--- a/rentree/css/adminprincipal.css
+++ b/rentree/css/adminprincipal.css
@@ -38,3 +38,9 @@ table thead tr th{
     text-align: center;
     vertical-align: middle !important;
 }
+
+table tbody tr td{
+    text-align: center;
+    vertical-align: middle !important;
+    padding: 10px  !important;
+}
