--- a/rentree/css/adminPanel.css
+++ b/rentree/css/adminPanel.css
@@ -199,7 +199,10 @@
     border:1px solid #999;
     border-radius:5px;
     display:inline-block;
-    padding:3px 8px;
+    padding-top: 3px;
+padding-right: 8px;
+padding-bottom: 5px;
+padding-left: 8px;
     text-decoration:none
 }
 .tree li.parent_li>span {
@@ -216,3 +219,4 @@
     border:1px solid #94a0b4;
     color:#000
 }
+
