--- a/rentree/css/adminPanel.css
+++ b/rentree/css/adminPanel.css
@@ -259,3 +259,17 @@ table#promotionsList_content{
     text-align: center;
     font-weight: 800;
 }
+
+#sortable li{
+    list-style-type: none;
+    height: 28px;
+    cursor: pointer;
+}
+
+.ui-state-default{
+    margin-top: 2px !important;
+}
+
+#sortable{
+    margin-top: 20px;
+}
